--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -376,7 +376,6 @@ header img {
 
 /* Section 4 */
 .restaurants {
-  position: relative;
   height: 1226px;
   width: 375px;
   background-color: #F3F3F3;
@@ -385,11 +384,29 @@ header img {
   justify-content: center;
   align-items: center;
 }
+.restaurants__nouveau {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 13px;
+  right: 13px;
+  z-index: 1;
+  width: 80px;
+  height: 29px;
+  background: #99E2D0;
+  color: #008766;
+  border-radius: 2px;
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 14px;
+}
 .restaurants a {
   text-decoration: none;
   color: black;
 }
 .restaurants__div {
+  position: relative;
   width: 340px;
   height: 251px;
   display: flex;
