--- a/assets/style/restaurants.css
+++ b/assets/style/restaurants.css
@@ -14,6 +14,11 @@ footer {
   height: 186px;
   background-color: #353535;
 }
+@media (min-width: 1440px) {
+  footer {
+    width: 1440px;
+  }
+}
 footer a {
   text-decoration: none;
   color: white;
@@ -146,6 +151,7 @@ header img {
 .section__menu__box {
   height: 69px;
   background: white;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
   border-radius: 15.04px;
   margin-top: 12px;
   display: flex;
@@ -189,8 +195,9 @@ header img {
 .btn {
   width: 186px;
   height: 50px;
-  border: 1px solid;
+  border: 0px solid;
   color: white;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   background: linear-gradient(#FF79DA, #9356DC);
   border-radius: 25px;
   font-family: "Roboto";
