--- a/assets/style/restaurants.scss
+++ b/assets/style/restaurants.scss
@@ -94,6 +94,7 @@ header {
     &__box {
         height: 69px;
         background: white;
+        box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
         border-radius: 15.04px;
         margin-top: 12px;
         display: flex;
