--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -8,6 +8,9 @@ body {
     flex-direction: column;
     align-items: center;
     height: 2252px;
+    @media (min-width: $bp-desktop) {
+        height: 1544px;
+    }
 }
 
 header {
@@ -18,6 +21,9 @@ header {
     align-items: center;
     box-shadow: 0 2px 4px 0px rgba(0, 0, 0, 0.15);
     z-index: 1;
+    @media (min-width: $bp-desktop) {
+        width: 1440px;
+    }
     img {
         width: 197px;
         height: 36px;
@@ -31,9 +37,15 @@ header {
     @include section(50px, 375px, $color-search-place);
     flex-direction: row;
     justify-content: center;
+    @media (min-width: $bp-desktop) {
+        width: 1440px;
+    }
     img {
         margin-right: 16px;
         margin-left: 25%;
+        @media (min-width: $bp-desktop) {
+            margin-left: 6%;
+        }
     }
     input {
         border:none;
@@ -49,18 +61,67 @@ header {
 
 /* Section 2 */
 .exploration {
+    display: flex;
+    flex-direction: column;    
     @include section(288px, 375px, $color-background);
     text-align: center;
+    @media (min-width: $bp-desktop) {
+        width: 1440px;
+        gap: 18px;
+    }
     h2 {
+        margin: 0;
         width: 275px;
         height: 68px;
+        @media (min-width: $bp-desktop) {
+            width: 645px;
+            height: 47px;
+            margin: 0;
+        }
     }
+    h3 {
+        height: 46px;
+        margin-bottom: 35px;
+        @media (min-width: $bp-desktop) {
+            height: 46px;
+            margin: 0;
+        }
+        }
 }
 
 /* Section 3 */
 .fonctionnement {
     @include section(440px, 375px, white);
     
+    @media (min-width: $bp-desktop) {
+        width: 1440px;
+        height: 230px;
+        display: flex;
+        align-items: center;
+    }
+    h2 {
+        text-align: start;
+    }
+    &__responsive{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        @media (min-width: $bp-desktop) {
+            flex-direction: row;
+            gap: 30px;
+        }
+    }
+    &__title {
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        width: 100%;
+        margin-left: 34px;
+        @media (min-width: $bp-desktop) {
+            margin-left: 390px;
+        }
+    }
     &__div{
         width: 322.49px;
         height: 72.38px;
@@ -69,28 +130,38 @@ header {
         justify-content: center;
         align-items: center;
         background: $color-background;
-        box-shadow: rgba(99, 99, 99, 0.2) 0px 3px 8px 2px;
+        box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
         border-radius: 20px;
         margin-bottom: 26px;
+        @media (min-width: $bp-desktop) {
+            width: 335px;
+        }
 
         img {
             position: relative;
             left: -27px;
         }
 
-        &--id {
-            position : relative;
-            left: -65px;
-            @include police('Roboto', 500, 14.18px);
-            border-radius: 100%;
-            width: 24px;
-            height: 24px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            background: $color-purple;
-
+        &__id {
+            &--1 {
+                @include id(-65px);
+                @media (min-width: $bp-desktop) {
+                    left: -73px;
+                }
+            }
+            &--2 {
+                @include id(-73px);
+                @media (min-width: $bp-desktop) {
+                    left: -79px;
+                }
+            }
+            &--3 {
+                @include id(-69px);
+                @media (min-width: $bp-desktop) {
+                    left: -76px;
+                }
+            }
+        
             p {
                 position: relative;
                 top: 1px;
@@ -102,7 +173,22 @@ header {
 /* Section 4 */
 .restaurants {
     @include section(1226px, 375px, $color-background);
-
+    @media (min-width: $bp-desktop) {
+        width: 1440px;
+        height: 608px;
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    &__title {
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        width: 100%;
+        margin-left: 34px;
+        @media (min-width: $bp-desktop) {
+            margin-left: 360px;
+        }
+    }
     &__nouveau {
         display: flex;
         justify-content: center;
@@ -134,6 +220,9 @@ header {
         background: white;
         border-radius: 15px;
         margin-bottom: 18px;
+        @media (min-width: $bp-desktop) {
+            width: 490px;
+        }
         &--img {
             width: 100%;
             height: 174px;
@@ -161,6 +250,14 @@ header {
                 margin-right: 25px;
             }
         }
+    }
+}
+
+#resto {
+    @media (min-width: $bp-desktop) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap:100px;
     }
 }
 
