--- a/assets/style/components/footer.scss
+++ b/assets/style/components/footer.scss
@@ -4,12 +4,9 @@
 /***** Footer *****/
 footer {
     color: white;
-    width: 375px;
+    width: 100%;
     height: 186px;
     background-color: $color-footer;
-    @media (min-width: $bp-desktop) {
-        width: 1440px;
-    }
     a{
         text-decoration: none;
         color: white;
