--- a/assets/style/restaurants.css
+++ b/assets/style/restaurants.css
@@ -10,14 +10,9 @@
 /***** Footer *****/
 footer {
   color: white;
-  width: 375px;
+  width: 100%;
   height: 186px;
   background-color: #353535;
-}
-@media (min-width: 1440px) {
-  footer {
-    width: 1440px;
-  }
 }
 footer a {
   text-decoration: none;
@@ -59,6 +54,19 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
+  width: 100%;
+}
+
+main {
+  width: 100%;
+}
+@media (min-width: 1440px) {
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 header {
@@ -87,36 +95,54 @@ header img {
 /***** Sections *****/
 /* Section img */
 .section__img {
-  width: 375px;
+  width: 100%;
   height: 275px;
   z-index: 0;
 }
 .section__img img {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .section__menu {
   position: relative;
   margin-top: -55px;
   padding-top: 55px;
-  width: 375px;
+  width: 100%;
   height: 1121px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   background: #F3F3F3;
   z-index: 1;
 }
+@media (min-width: 1440px) {
+  .section__menu {
+    width: 1055px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
 .section__menu--enchantee {
   position: relative;
   margin-top: -55px;
   padding-top: 55px;
-  width: 375px;
+  width: 100%;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   background: #F3F3F3;
   z-index: 1;
   height: 1180px;
+}
+@media (min-width: 1440px) {
+  .section__menu--enchantee {
+    width: 1055px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 .section__menu--padding {
   padding: 0 17px 0 17px;
@@ -132,6 +158,12 @@ header img {
   font-weight: 400;
   font-size: 28px;
   margin-bottom: 40px;
+}
+@media (min-width: 1440px) {
+  .section__menu__title {
+    justify-content: center;
+    gap: 24px;
+  }
 }
 .section__menu__title img {
   width: 22px;
@@ -159,6 +191,11 @@ header img {
   justify-content: space-between;
   align-items: center;
   padding: 0 15px 0 15px;
+}
+@media (min-width: 1440px) {
+  .section__menu__box {
+    width: 634px;
+  }
 }
 .section__menu__box__title {
   font-family: "Roboto";
@@ -208,9 +245,27 @@ header img {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: transform 450ms;
 }
 .btn__div {
   width: 100%;
   display: flex;
   justify-content: center;
+}
+.btn:hover {
+  transform: scale(1.1);
+}
+
+/***** Font *****/
+i {
+  font-size: 0.8em;
+  color: #F3F3F3;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+i:hover {
+  background: linear-gradient(#FF79DA, #9356DC);
+  -webkit-background-clip: text;
+          background-clip: text;
+  color: transparent;
+  text-shadow: none;
 }/*# sourceMappingURL=restaurants.css.map */
