--- a/assets/style/restaurants.scss
+++ b/assets/style/restaurants.scss
@@ -6,6 +6,18 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
+    width: 100%;
+}
+
+main {
+    width: 100%;
+    @media (min-width: $bp-desktop) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
 }
 
 header {
@@ -35,12 +47,13 @@ header {
 /***** Sections *****/
 /* Section img */
 .section__img {
-    width: 375px;
+    width: 100%;
     height: 275px;
     z-index: 0;
     img {
         width: 100%;
         height: 100%;
+        object-fit: cover;
     }
 }
 
@@ -48,22 +61,34 @@ header {
     position: relative;
     margin-top: -55px; 
     padding-top: 55px; 
-    width: 375px;
+    width: 100%;
     height: 1121px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     background: $color-background;
     z-index: 1;
+    @media (min-width: $bp-desktop) {
+       width: 1055px;
+       display: flex;
+       justify-content: center;
+       align-items: center;
+    }
     &--enchantee {
         position: relative;
         margin-top: -55px; 
         padding-top: 55px; 
-        width: 375px;
+        width: 100%;
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
         background: $color-background;
         z-index: 1;
         height: 1180px;
+        @media (min-width: $bp-desktop) {
+            width: 1055px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+         }
     }
     &--padding{
         padding: 0 17px 0 17px;
@@ -77,6 +102,10 @@ header {
         padding-right: 23px;
         @include police('Shrikhand', 400, 28px);
         margin-bottom: 40px;
+        @media (min-width: $bp-desktop) {
+            justify-content: center;
+            gap: 24px;
+         }
         img {
             width: 22px;
             height: 21px;
@@ -102,6 +131,9 @@ header {
         justify-content: space-between;
         align-items: center;
         padding: 0 15px 0 15px;
+        @media (min-width: $bp-desktop) {
+            width: 634px;
+         }
         &__title {
             @include police('Roboto', 500, 18px);
         }
@@ -136,5 +168,23 @@ header {
         width: 100%;
         display: flex;
         justify-content: center;
+    }
+    transition: transform 450ms;
+    &:hover {
+        transform: scale(1.1);
+    }
+}
+
+
+/***** Font *****/
+i {
+    font-size: 0.8em;
+    color: $color-background;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    &:hover {
+        background: linear-gradient($color-pink, $color-purple);
+        background-clip: text;
+        color: transparent;
+        text-shadow: none;
     }
 }
