--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -7,6 +7,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
     height: 2252px;
     @media (min-width: $bp-desktop) {
         height: 1544px;
@@ -15,37 +16,34 @@ body {
 
 header {
     height: 63px;
-    width: 375px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 0 2px 4px 0px rgba(0, 0, 0, 0.15);
     z-index: 1;
-    @media (min-width: $bp-desktop) {
-        width: 1440px;
-    }
     img {
         width: 197px;
         height: 36px;
     }
 }
 
+main {
+    width: 100%;
+}
+
 /***** Sections *****/
 /* Section 1 */
 .search-bar {
     z-index: 0;
-    @include section(50px, 375px, $color-search-place);
+    @include section(50px, $color-search-place);
+    width: 100%;
     flex-direction: row;
     justify-content: center;
-    @media (min-width: $bp-desktop) {
-        width: 1440px;
-    }
+    align-items: center;
     img {
         margin-right: 16px;
-        margin-left: 25%;
-        @media (min-width: $bp-desktop) {
-            margin-left: 6%;
-        }
+        margin-left: 85px;
     }
     input {
         border:none;
@@ -62,11 +60,14 @@ header {
 /* Section 2 */
 .exploration {
     display: flex;
-    flex-direction: column;    
-    @include section(288px, 375px, $color-background);
+    flex-direction: column;
+    height: 288px;
+    width: 100%;
+    background-color: $color-background;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     @media (min-width: $bp-desktop) {
-        width: 1440px;
         gap: 18px;
     }
     h2 {
@@ -91,10 +92,9 @@ header {
 
 /* Section 3 */
 .fonctionnement {
-    @include section(440px, 375px, white);
+    @include section(440px, white);
     
     @media (min-width: $bp-desktop) {
-        width: 1440px;
         height: 230px;
         display: flex;
         align-items: center;
@@ -119,7 +119,7 @@ header {
         width: 100%;
         margin-left: 34px;
         @media (min-width: $bp-desktop) {
-            margin-left: 390px;
+            margin-left: 360px;
         }
     }
     &__div{
@@ -172,9 +172,8 @@ header {
 
 /* Section 4 */
 .restaurants {
-    @include section(1226px, 375px, $color-background);
+    @include section(1226px, $color-background);
     @media (min-width: $bp-desktop) {
-        width: 1440px;
         height: 608px;
         padding-top: 60px;
         padding-bottom: 60px;
@@ -228,6 +227,7 @@ header {
             height: 174px;
             border-top-left-radius: 15px;
             border-top-right-radius: 15px;
+            object-fit: cover;
         }
         &__bottom {
             display: flex;
@@ -247,7 +247,10 @@ header {
             }
 
             &__img {
-                margin-right: 25px;
+                position: relative;
+                left: 85%;
+                bottom: 70px;
+                cursor: pointer;
             }
         }
     }
@@ -285,5 +288,23 @@ h4 {
 /***** Boutons *****/
 .btn {
     @include bouton(218px);
+    transition: transform 450ms;
+    &:hover {
+        transform: scale(1.1);
+    }
+}
+
+
+/***** Font *****/
+i {
+    font-size: 1.5em;
+    color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    &:hover {
+        background: linear-gradient($color-pink, $color-purple);
+        background-clip: text;
+        color: transparent;
+        text-shadow: none;
+    }
 }
 
