--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -117,10 +117,8 @@ main {
         justify-content: flex-start;
         align-items: flex-start;
         width: 100%;
-        margin-left: 34px;
-        @media (min-width: $bp-desktop) {
-            margin-left: 360px;
-        }
+        position: relative;
+        left: -10px;
     }
     &__div{
         width: 322.49px;
@@ -183,10 +181,6 @@ main {
         justify-content: flex-start;
         align-items: flex-start;
         width: 100%;
-        margin-left: 34px;
-        @media (min-width: $bp-desktop) {
-            margin-left: 360px;
-        }
     }
     &__nouveau {
         display: flex;
@@ -247,10 +241,8 @@ main {
             }
 
             &__img {
-                position: relative;
-                left: 85%;
-                bottom: 70px;
                 cursor: pointer;
+                margin-right: 14px;
             }
         }
     }
@@ -288,9 +280,9 @@ h4 {
 /***** Boutons *****/
 .btn {
     @include bouton(218px);
-    transition: transform 450ms;
     &:hover {
-        transform: scale(1.1);
+        background: linear-gradient(lighten($color-pink, 5%), lighten($color-purple, 5%));
+        box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.50);
     }
 }
 
@@ -300,6 +292,7 @@ i {
     font-size: 1.5em;
     color: white;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    transition: color 1s ease, text-shadow 0.1s ease;
     &:hover {
         background: linear-gradient($color-pink, $color-purple);
         background-clip: text;
@@ -307,4 +300,48 @@ i {
         text-shadow: none;
     }
 }
+
+/***** Loader *****/
+.loader-div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    animation: degrade 3s forwards;
+}
+
+.loader {
+    border: 8px solid $color-background;
+    border-top: 8px solid $color-pink;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: rotation 1s ease infinite;
+}
+
+@keyframes rotation {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+@keyframes degrade {
+    0% {
+        opacity: 1;
+    }
+    80% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+
 
